Merge .util namespaces, misc code cleanup